--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,10 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
+        "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.7",
-        "livewire/livewire": "^2.10"
+        "livewire/livewire": "^2.10",
+        "socialiteproviders/trakt": "^4.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
